--- a/LT.NET_project_cuoiki/Asset/css/lostpassword.css
+++ b/LT.NET_project_cuoiki/Asset/css/lostpassword.css
@@ -94,7 +94,7 @@ button {
     margin-top: 20px;
 }
 
-.body_page .lost-pass-container form input[type=email] {
+.body_page .lost-pass-container form input[type=text] {
     padding: 0 20px;
     width: 100%;
     height: 60px;
