--- a/LT.NET_project_cuoiki/Views/Admin/tableDataProduct.cshtml
+++ b/LT.NET_project_cuoiki/Views/Admin/tableDataProduct.cshtml
@@ -70,7 +70,7 @@
             <!--      <li><a class="app-menu__item" href="#"><i class='app-menu__icon bx bx-user-voice'></i><span-->
             <!--            class="app-menu__label">Quản lý khách hàng</span></a></li>-->
             <li>
-                <a class="app-menu__item active" href="@Url.Action("tableDataProduct", new { id = 1 })">
+                <a class="app-menu__item active" href="@Url.Action("tableDataProduct")">
                     <i class='app-menu__icon bx bx-purchase-tag-alt'></i><span class="app-menu__label">Quản lý sản phẩm</span>
                 </a>
             </li>
@@ -182,14 +182,16 @@
                                             <td>@pe.Category</td>
                                             <td width="8%">
                                                 <a class="btn btn-primary btn-sm trash" type="button" title="Xóa"
-                                                        onclick="myFunction(this)" style="color:red"
+                                                   onclick="myFunction(this)" style="color:red"
                                                    href="DeleteProductByAdmin?pid=@pe.Id">
                                                     <i class="fas fa-trash-alt"></i>
                                                 </a>
-                                                <button class="btn btn-primary btn-sm edit" type="button" title="Sửa" id="show-emp" data-toggle="modal"
-                                                        data-target="#ModalUP">
+                                                <a class="btn btn-primary btn-sm edit" type="button" title="Sửa" id="show-emp"
+                                                   data-target="#ModalUP"
+                                                   style="color: rgb(245 157 57)"
+                                                   href="@Url.Action("EditProduct")?edit_id=@pe.Id">
                                                     <i class="fas fa-edit"></i>
-                                                </button>
+                                                </a>
 
                                             </td>
                                         </tr>
@@ -206,71 +208,7 @@
     <!--
       MODAL
     -->
-    <div class="modal fade" id="ModalUP" tabindex="-1" role="dialog" aria-hidden="true" data-backdrop="static"
-         data-keyboard="false">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-
-                <div class="modal-body">
-                    <div class="row">
-                        <div class="form-group  col-md-12">
-                            <span class="thong-tin-thanh-toan">
-                                <h5>Chỉnh sửa thông tin sản phẩm cơ bản</h5>
-                            </span>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="form-group col-md-6">
-                            <label class="control-label">ID sản phẩm </label>
-                            <input class="form-control" type="number" value="71309005">
-                        </div>
-                        <div class="form-group col-md-6">
-                            <label class="control-label">Tên sản phẩm</label>
-                            <input class="form-control" type="text" required value="Bàn ăn gỗ Theresa">
-                        </div>
-                        <div class="form-group col-md-6">
-                            <label class="control-label">Loại đá</label>
-                            <input class="form-control" type="text">
-                        </div>
-                        <div class="form-group  col-md-6">
-                            <label class="control-label">Số lượng</label>
-                            <input class="form-control" type="number" required value="20">
-                        </div>
-                        <div class="form-group col-md-6 ">
-                            <label for="exampleSelect1" class="control-label">Màu sắc</label>
-                            <select class="form-control" id="exampleSelect1">
-                                <option>-- Chọn màu sắc --</option>
-                                <option>Đen</option>
-                                <option>Xanh da trời</option>
-                                <option>Nâu</option>
-                                <option>Màu Gold</option>
-                                <option>Xanh lá</option>
-                                <option>Nhiều màu</option>
-                                <option>Cam</option>
-                                <option>Hồng</option>
-                                <option>Tím</option>
-                                <option>Đỏ</option>
-                                <option>Trắng</option>
-                                <option>Vàng</option>
-                            </select>
-                        </div>
-                        <div class="form-group col-md-6">
-                            <label class="control-label">Giá bán</label>
-                            <input class="form-control" type="text" value="5.600.000">
-                        </div>
-                    </div>
-                    <BR>
-                    <BR>
-                    <BR>
-                    <button class="btn btn-save" type="button">Lưu lại</button>
-                    <a class="btn btn-cancel" data-dismiss="modal" href="#">Hủy bỏ</a>
-                    <BR>
-                </div>
-                <div class="modal-footer">
-                </div>
-            </div>
-        </div>
-    </div>
+    
     <!--
     MODAL
     -->
